// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`type-paramters.js - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["flow"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
type FooThisNameIsVeryLongSoThatItBreaksToTheNextLine = Something<FirstParam, SecondParam>;
type ShortName = Something<FirstParam, SecondParam>;

=====================================output=====================================
type FooThisNameIsVeryLongSoThatItBreaksToTheNextLine = Something<
  FirstParam,
  SecondParam,
>;
type ShortName = Something<FirstParam, SecondParam>;

================================================================================
`;

exports[`type-paramters.js - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["flow"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
type FooThisNameIsVeryLongSoThatItBreaksToTheNextLine = Something<FirstParam, SecondParam>;
type ShortName = Something<FirstParam, SecondParam>;

=====================================output=====================================
type FooThisNameIsVeryLongSoThatItBreaksToTheNextLine = Something<
  FirstParam,
  SecondParam,
>;
type ShortName = Something<FirstParam, SecondParam>;

================================================================================
`;

exports[`type-paramters.js - {"trailingComma":"none"} format 1`] = `
====================================options=====================================
parsers: ["flow"]
trailingComma: "none"
                                                      printWidth: 80 (default) |
=====================================input======================================
type FooThisNameIsVeryLongSoThatItBreaksToTheNextLine = Something<FirstParam, SecondParam>;
type ShortName = Something<FirstParam, SecondParam>;

=====================================output=====================================
type FooThisNameIsVeryLongSoThatItBreaksToTheNextLine = Something<
  FirstParam,
  SecondParam
>;
type ShortName = Something<FirstParam, SecondParam>;

================================================================================
`;
